# codescry

./: .gitattributes  .gitignore  .gitmodules  .talismanrc  CLAUDE.md  EXPERIMENTS.md  README.md  pyproject.toml
data/: .gitignore  all_techniques_comparison_chart.py  build_claude_ground_truth.py  description_rewrites.jsonl  three_way_comparison.py  three_way_comparison.tsv  three_way_comparison_report.txt
docs/: api-reference.md  architectural-design-decisions.md  architecture.md  cfg-constructor.md  testing.md
examples/: classify_example.py  extract_java_flow.py  goto_definition.py
js/: extract_rules.js
pipeline/: build_pattern_embeddings.py  survey_build_pattern_embedding_cache.py  survey_classify_by_embedding_cosine_similarity.py  survey_classify_by_embedding_gate_nearest_neighbour_gemini_flash.py  survey_classify_by_embedding_similarity_weighted_knn.py  survey_classify_by_framework_specific_pattern_embedding_gate_gemini_flash.py  survey_classify_by_gemini_flash_llm.py  survey_classify_by_ollama_llm.py  survey_classify_by_tfidf_logistic_regression.py  survey_repo_embedding.py  survey_repo_gemini_flash.py  survey_repo_hybrid.py  survey_repo_ollama.py  survey_repo_pattern_embedding.py
presentation/: index.html
query/: analysis.dl  datalog_integration_runner.py  datalog_plugins.py  spring_integration.dl  treesitter_to_datalog.py
scripts/: analysis.dl  build_pattern_embeddings.py  embedding_direction_test.py  embedding_matrix_test.py  embedding_matrix_test_non_io.py  generate_cfg_roles.py  generate_diagrams.py  generate_training_data.py  harvest_github.py  rewrite_pattern_descriptions.py  survey_repo.py  survey_repo_embedding.py  survey_repo_gemini_flash.py  survey_repo_hybrid.py  survey_repo_ollama.py  survey_repo_pattern_embedding.py  train_signal_classifier.py  treesitter_to_datalog.py
tests/: conftest.py  test_analysis_graph_builder.py  test_ast_walker.py  test_cfg_builder.py  test_cfg_child_resolver.py  test_cfg_constructor.py  test_cfg_graph_types.py  test_cfg_role_registry.py  test_cfg_to_dot.py  test_concretiser.py  test_concretiser_prompt.py  test_concretiser_response_parser.py  test_surveyor.py  (+21 more)
(+308 files in other folders)
