[project]
name = "cartographer"
version = "0.1.0"
description = ""
authors = [
    {name = "avishek-sen-gupta",email = "asgupta@thoughtworks.com"}
]
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "langgraph (>=1.0.7,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "neo4j (>=6.1.0,<7.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "sqlglot (>=28.10.1,<29.0.0)"
]

[project.optional-dependencies]
ml = [
    "ollama (>=0.4.0)",
]

[tool.poetry]
packages = [{include = "repo_surveyor", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
mypy = "^1.19.1"
pytest = "^9.0.2"
coverage = "^7.13.2"
neo4j = "6.1.0"
python-dotenv = "1.2.1"
tree-sitter-language-pack = "0.13.0"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=repo_surveyor --cov-report=term-missing --cov-report=html:htmlcov"
markers = [
    "local_repo: tests that depend on local repository clones (skipped in CI)",
]

[tool.coverage.run]
source = ["src/repo_surveyor"]
omit = [
    "src/repo_surveyor/call_flow/*",
    "src/repo_surveyor/lsp_bridge/*",
    "src/repo_surveyor/ml_classifier/*",
    "scripts/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
